force-app/main/default/objects/Account/fields/Integration_Error__c.field-meta.xml
<CustomField>
    <fullName>Integration_Error__c</fullName>
    <label>Integration Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>