force-app/main/default/objects/Account/fields/Loyalty_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Customer_ID__c</fullName>
    <externalId>true</externalId>
    <label>Loyalty Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>